# rins_t1s

./: .gitignore  README.md  requirements.txt
src/T1s/: CMakeLists.txt  package.xml
src/T1s/maps/: map.pgm
src/T1s/scripts/: face_search.py  robot_commander.py
src/dis_tutorial3/: CMakeLists.txt  package.xml
src/dis_tutorial3/launch/: T1s.launch.py  sim_turtlebot_nav.launch.py
src/dis_tutorial3/maps/: map.pgm
src/dis_tutorial3/msg/: DetectedFace.msg
src/dis_tutorial3/rviz/: exported_config.rviz
src/dis_tutorial3/scripts/: backup.py  detect_people.py  detect_rings.py  face_search.py  planner.py  planner_mock.py  test.py
src/scripts/: detect_people.py  robot_commander.py
src/t1s/: CMakeLists.txt  package.xml
src/t1s/launch/: dis_sim.launch.py  ignition.launch.py  localization.launch.py  nav2.launch.py  sim_turtlebot_nav.launch.py  sim_turtlebot_slam.launch.py  slam.launch.py  turtlebot4_spawn.launch.py  turtlebot4_spawn_nav.launch.py
src/t1s/maps/: map.yaml
src/t1s/msg/: DetectedRing.msg
src/t1s/scripts/: .detect_people.py.swp  detect_people.py  detect_rings.py  detect_rings_mock.py  face_search.py  planner.py
src/t1s/worlds/: demo2.sdf
